--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "MIT",
   "devDependencies": {
     "babel-eslint": "^6.0.0",
-    "eslint": "^2.5.3"
+    "eslint": "^3.7.1",
+    "eslint-plugin-react": "^6.4.0"
   },
   "scripts": {
     "test": "echo 'Nothing to test'"
