move eslint-plugin-react to runtime deps

--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   ],
   "author": "Gadzhi Gadzhiev <inbox@resure.net> (https://resure.net)",
   "license": "MIT",
-  "devDependencies": {
-    "babel-eslint": "^6.0.0",
-    "eslint": "^3.7.1",
+  "dependencies": {
     "eslint-plugin-react": "^6.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.7.1"
   },
   "scripts": {
     "test": "echo 'Nothing to test'"
