--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   "keywords": [
     "eslint"
   ],
-  "author": "Gadzhi Gadzhiev <inbox@resure.net> (https://resure.net)",
+  "author": "Gadzhi Gadzhiev <resure@zireael.org> (https://resure.net)",
   "license": "MIT",
   "dependencies": {
+    "babel-eslint": "^7.1.1",
+    "eslint": "^3.14.1",
     "eslint-plugin-react": "^6.4.0"
-  },
-  "devDependencies": {
-    "eslint": "^3.7.1"
   },
   "scripts": {
     "test": "echo 'Nothing to test'"
